# sample-cloudops-multi-agent-platform

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  cost-estimate.md  development.md  observability-tuning.md
docs/agents/: README.md  cost-operations.md  health-events.md  lambda-runtime-upgrade.md  network-resiliency.md  pricing.md  tag-governance.md
scripts/: backfill_health.py  deploy.sh  generate_cross_account_role_policies.sh  run-local.sh  shared-keys.txt
scripts/lib/: auth.sh  build.sh  commands.sh  common.sh  config.sh  hierarchy.sh  shared_config.sh  sync.sh  teardown.sh  terraform.sh
skills/developer-guide/: SKILL.md
skills/eks-operation-review/: SKILL.md
skills/finops-analysis/: SKILL.md
skills/health-events-digest/: SKILL.md
skills/resilience-report/: SKILL.md
skills/tag-governance-assessment/: SKILL.md
src/agents/: .hierarchy-lambda-runtime-upgrade-agent.json  README.md  __init__.py  hierarchy.json
src/frontend/: .gitignore  next.config.ts  package-lock.json  package.json
src/shared/: __init__.py
terraform/: .gitignore  README.md  backend.tf  bootstrap.yaml  main.tf  outputs.tf  variables.tf  versions.tf
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_live_stack.py  test_network_resiliency_e2e.py
tests/scripts/: test_auth_sh.sh  test_cmd_setup_sso.sh  test_shared_config_new_keys.sh
tests/topology/: README.md  test_slice_and_validate.py
tests/unit/: test_agui_report_streaming.py  test_aws_utils.py  test_cross_account.py  (+11 more)
(+236 files in other folders)
